k8s/sql_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagalys-sql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: sql-server
  template:
    metadata:
      labels:
        pod: sql-server
    spec:
      volumes: # use this instad of env
        - name: mysql-config-volume
          configMap:
            name: mysql-config
        - name: secret-sql-volume
          secret:
            secretName: tagalys-secret
        - name: sql-storage
          persistentVolumeClaim:
            claimName: tagalys-sql-storage-claim
      containers:
        - name: sql-server-container
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: sql-storage
              mountPath: "/var/lib/mysql"
            - name: secret-sql-volume
              mountPath: "/mnt/secret"
              readOnly: true
            - name: mysql-config-volume ## specify volume name
              mountPath: /etc/mysql/conf.d/default_auth.cnf ## path to mount file
              subPath: default_auth
          args: ["--default-authentication-plugin=mysql_native_password","--ignore-db-dir=lost+found"]
