k8s/api_server_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: tagalys-api-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    pod: api-server
  ports:
    - port: 5000
      targetPort: 3000
