k8s/api_server_node_port_dev.yml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 1000
      targetPort: 3000
      nodePort: 31515
  selector:
    pod: api-server
