k8s/sql_server_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: tagalys-sql-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    pod: sql-server
  ports:
    - port: 3306
      targetPort: 3306
