k8s/tagalys-ingress-load-balancer.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tagalys-ingress-load-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: tagalys-api-server-cluster-ip
              servicePort: 5000
